# browser-agent-privacy-layer

./: .env.example  .gitignore  BLUEPRINT.md  README.md  pyproject.toml  run_agent.sh  run_demo.sh  run_mediator_sandbox.sh
Holo/: .env.example  .gitignore  PROJECT_MAP.md  README.md  pyproject.toml  run_demo.sh  run_step1.sh
Holo/config/: openshell-mediator-policy.yaml  privacy-policy.json
Holo/coreml-redactor/: README.md  pyproject.toml
Holo/docs/: local-llm-runbook.md
Holo/plva-v2-baseline/: PROVENANCE.md  README.md  SHA256SUMS  SMOKE_TEST.md  baseline-app-dist-integrity.json  dist-integrity.json  index.html  package-lock.json  package.json  snapshot.json  source-integrity.json  vite.config.js
Holo/plva-v3-new/: LICENSES.md  dist-integrity.json  index.html  package-lock.json  snapshot.json  source-integrity.json
Holo/tests/: test_call_history.py  test_contract_probe.py  test_credentials.py  (+13 more)
config/: mediator-criteria.json
coreml-redactor/: pyproject.toml
coreml-redactor/src/plva_coreml/: coreml_session.py  vision.py  visual_redactor.py
coreml-redactor/tests/: test_ocr.py  test_semantics.py  test_worker.py
docs/: local-llm-runbook.md  usage.md
plva-v3-new/: .gitignore  BENCHMARK.md  PROVENANCE.md  README.md  SHA256SUMS  SMOKE_TEST.md  package.json  vite.config.js
redactor-worker/: README.md
test-pages/: plva-block-test.html
tests/: test_accelerated_redactor.py  test_credentials.py  test_demo.py  test_local_llm.py  test_runtime_capture.py  test_semantic_executor.py  test_tool_channel.py  test_tool_loop.py  test_tool_probe.py  test_tools.py
(+82 files in other folders)
