[project]
name = "plva-coreml-redactor"
version = "0.1.0"
description = "Separate Apple Neural Engine feasibility backend for PLVA"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.4,<3",
  "onnx>=1.20,<2",
  "onnxruntime>=1.27,<1.28",
  "pillow>=12.1,<13",
  "scipy>=1.17,<2",
  "tokenizers>=0.22,<0.23",
]

[project.scripts]
plva-ane-probe = "plva_coreml.probe:main"
plva-ane-live = "plva_coreml.live:main"
plva-vision-worker = "plva_coreml.worker:main"

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plva_coreml"]

[dependency-groups]
dev = [
  "mypy>=1.19,<2",
  "pytest>=9,<10",
  "ruff>=0.14,<0.15",
  "types-pillow>=10.2",
]
semantic-alternatives = [
    "gliner2>=1.3.2",
    # openai_privacy_filter support is on main but not yet in a tagged release.
    "mlx-embeddings",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[tool.uv.sources]
mlx-embeddings = { git = "https://github.com/Blaizzy/mlx-embeddings", rev = "9b28270be81211f2b8daed0041aec65ea5dc4b28" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/plva_coreml/live.py" = ["E501"] # embedded viewer HTML/CSS/JS

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["no-any-return"]
